Added the ability to view a list of all projects

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,1 +1,7 @@
-<% title(@project.name, "projects") %> 
+<title>
+<% if content_for?(:title) %>
+<%= yield(:title) %>
+<% else %>
+Tickettee
+<% end %>
+</title>
