--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,6 @@
-<title>
-<% if content_for?(:title) %>
-<%= yield(:title) %>
-<% else %>
-Tickettee
-<% end %>
-</title>
+<h2><%= @project.name %></h2>
+<% @title = "TextMate 2 - Projects - Ticketee" %>
 <%= link_to "Edit Project", edit_project_path(@project) %>
+<%= link_to "Delete Project", @project, :method => :delete,
+  :confirm => "Are you sure you want to delete this project?" %>
+  <%= link_to "New Ticket", new_project_ticket_path(@project) %>
