--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,7 +1,14 @@
+<div id='ticket'>
+  <h2><%= @ticket.title %></h2>
+   <%= link_to "Edit Ticket", [:edit, @project, @ticket] %>
+  <%= simple_format(@ticket.description) %>
+</div>
 <ul id='tickets'>
   <% @project.tickets.each do |ticket| %>
     <li>
       #<%= ticket.id %> - <%= link_to ticket.title, [@project, ticket] %>
+      <%= link_to "Delete Ticket", [@project, @ticket], :method => :delete,
+                     :confirm => "Are you sure you want to delete this ticket?" %>
     </li>
   <% end %>
 </ul>
